@@ -1,12 +1,42 @@
+/*
+ * Universal Media Server, for streaming any media to DLNA compatible renderers
+ * based on the http://www.ps3mediaserver.org. Copyright (C) 2012 UMS
+ * developers.
+ *
+ * This program is a free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License as published by the Free
+ * Software Foundation; version 2 of the License only.
+ *
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+ * details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * this program; if not, write to the Free Software Foundation, Inc., 51
+ * Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+ */
+
 package net.pms.util;
 
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
+import com.sun.jna.Platform;
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.lang.management.ManagementFactory;
 import java.lang.reflect.Field;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import net.pms.PMS;
-import net.pms.io.Gob;
+import net.pms.io.BasicSystemUtils;
+import net.pms.io.StreamGobbler;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -15,14 +45,16 @@ import org.slf4j.LoggerFactory;
 public class ProcessUtil {
 	private static final Logger LOGGER = LoggerFactory.getLogger(ProcessUtil.class);
 
-	// how long to wait in milliseconds until a kill -TERM on Unix has been deemed to fail
+	// how long to wait in milliseconds until a kill -TERM on Unix has been
+	// deemed to fail
 	private static final int TERM_TIMEOUT = 10000;
 
-	// how long to wait in milliseconds until a kill -ALRM on Unix has been deemed to fail
+	// how long to wait in milliseconds until a kill -ALRM on Unix has been
+	// deemed to fail
 	private static final int ALRM_TIMEOUT = 2000;
 
 	// work around a Java bug
-	// see: http://kylecartmell.com/?p=9
+	// see: http://www.cnblogs.com/abnercai/archive/2012/12/27/2836008.html
 	public static int waitFor(Process p) {
 		int exit = -1;
 
@@ -62,35 +94,31 @@ public class ProcessUtil {
 	 *
 	 * call chain (innermost last):
 	 *
-	 *     WaitBufferedInputStream.close
-	 *     BufferedOutputFile.detachInputStream
-	 *     ProcessWrapperImpl.stopProcess
-	 *     ProcessUtil.destroy
-	 *     ProcessUtil.kill
+	 * WaitBufferedInputStream.close BufferedOutputFile.detachInputStream
+	 * ProcessWrapperImpl.stopProcess ProcessUtil.destroy ProcessUtil.kill
 	 *
-	 * my best guess is that the process's stdout/stderr streams
-	 * aren't being/haven't been fully/promptly consumed.
-	 * From the abovelinked article:
+	 * my best guess is that the process's stdout/stderr streams aren't
+	 * being/haven't been fully/promptly consumed. From the abovelinked article:
 	 *
-	 *     The Java 6 API clearly states that failure to promptly
-	 *     “read the output stream of the subprocess may cause the subprocess
-	 *     to block, and even deadlock.
+	 * The Java 6 API clearly states that failure to promptly “read the output
+	 * stream of the subprocess may cause the subprocess to block, and even
+	 * deadlock.
 	 *
-	 * This is corroborated by the fact that destroy() works fine if the
-	 * process is allowed to run to completion:
+	 * This is corroborated by the fact that destroy() works fine if the process
+	 * is allowed to run to completion:
 	 *
-	 *     https://code.google.com/p/ps3mediaserver/issues/detail?id=680#c11
+	 * https://code.google.com/p/ps3mediaserver/issues/detail?id=680#c11
 	 */
 	// send a Unix process the specified signal
 	public static boolean kill(Integer pid, int signal) {
 		boolean killed = false;
 		LOGGER.warn("Sending kill -" + signal + " to the Unix process: " + pid);
 		try {
-			Process process = Runtime.getRuntime().exec("kill -" + signal + " " + pid);
-			// "Gob": a cryptic name for (e.g.) StreamGobbler - i.e. a stream
-			// consumer that reads and discards the stream
-			new Gob(process.getErrorStream()).start();
-			new Gob(process.getInputStream()).start();
+			ProcessBuilder processBuilder = new ProcessBuilder("kill", "-" + signal, Integer.toString(pid));
+			processBuilder.redirectErrorStream(true);
+			Process process = processBuilder.start();
+			// consume the error and output process streams
+			StreamGobbler.consume(process.getInputStream(), true);
 			int exit = waitFor(process);
 			if (exit == 0) {
 				killed = true;
@@ -110,28 +138,27 @@ public class ProcessUtil {
 
 			if (pid != null) { // Unix only
 				LOGGER.trace("Killing the Unix process: " + pid);
-				Runnable r = new Runnable() {
-					@Override
-					public void run() {
-						try {
-							Thread.sleep(TERM_TIMEOUT);
-						} catch (InterruptedException e) {
-						}
+				Runnable r = () -> {
+					try {
+						Thread.sleep(TERM_TIMEOUT);
+					} catch (InterruptedException e) {
+					}
 
-						try {
-							p.exitValue();
-						} catch (IllegalThreadStateException itse) { // still running: nuke it
-							// kill -14 (ALRM) works (for MEncoder) and is less dangerous than kill -9
-							// so try that first 
-							if (!kill(pid, 14)) {
-								try {
-									// This is a last resort, so let's not be too eager
-									Thread.sleep(ALRM_TIMEOUT);
-								} catch (InterruptedException ie) {
-								}
-
-								kill(pid, 9);
+					try {
+						p.exitValue();
+					} catch (IllegalThreadStateException itse) {
+						// still running: nuke it
+						// kill -14 (ALRM) works (for MEncoder) and is less
+						// dangerous than kill -9 so try that first
+						if (!kill(pid, 14)) {
+							try {
+								// This is a last resort, so let's not be
+								// too eager
+								Thread.sleep(ALRM_TIMEOUT);
+							} catch (InterruptedException ie) {
 							}
+
+							kill(pid, 9);
 						}
 					}
 				};
@@ -144,12 +171,35 @@ public class ProcessUtil {
 		}
 	}
 
+	/**
+	 * Converts the path of the specified {@link File} to the equivalent MS-DOS
+	 * style 8.3 path using the Windows API function {@code GetShortPathNameW()}
+	 * if the path contains Unicode characters.
+	 *
+	 * @param file the {@link File} whose path to convert.
+	 * @return The resulting non-Unicode file path.
+	 */
+	public static String getShortFileNameIfWideChars(File file) {
+		if (file == null) {
+			return null;
+		}
+		return getShortFileNameIfWideChars(file.getPath());
+	}
+
+	/**
+	 * Converts the specified file path to the equivalent MS-DOS style 8.3 path
+	 * using the Windows API function {@code GetShortPathNameW()} if the path
+	 * contains Unicode characters.
+	 *
+	 * @param name the file path to convert.
+	 * @return The resulting non-Unicode file path.
+	 */
 	public static String getShortFileNameIfWideChars(String name) {
-		return PMS.get().getRegistry().getShortPathNameW(name);
+		return BasicSystemUtils.instance.getShortPathNameW(name);
 	}
 
 	// Run cmd and return combined stdout/stderr
-	public static String run(String... cmd) {
+	public static String run(int[] expectedExitCodes, String... cmd) {
 		try {
 			ProcessBuilder pb = new ProcessBuilder(cmd);
 			pb.redirectErrorStream(true);
@@ -163,7 +213,16 @@ public class ProcessUtil {
 				}
 			}
 			p.waitFor();
-			if (p.exitValue() != 0) {
+			boolean expected = false;
+			if (expectedExitCodes != null) {
+				for (int expectedCode : expectedExitCodes) {
+					if (expectedCode == p.exitValue()) {
+						expected = true;
+						break;
+					}
+				}
+			}
+			if (!expected) {
 				LOGGER.debug("Warning: command {} returned {}", Arrays.toString(cmd), p.exitValue());
 			}
 			return output.toString();
@@ -171,5 +230,153 @@ public class ProcessUtil {
 			LOGGER.error("Error running command " + Arrays.toString(cmd), e);
 		}
 		return "";
+	}
+
+	public static String run(String... cmd) {
+		int[] zeroExpected = {0};
+		return run(zeroExpected, cmd);
+	}
+
+	// Whitewash any arguments not suitable to display in dbg messages
+	// and make one single printable string
+	public static String dbgWashCmds(String[] cmd) {
+		StringBuilder sb = new StringBuilder();
+		boolean prevHeader = false;
+		for (String argument : cmd) {
+			if (isNotBlank(argument)) {
+				if (sb.length() > 0) {
+					sb.append(" ");
+				}
+
+				// Hide sensitive information from the log
+				String modifiedArgument;
+				if (prevHeader) {
+					modifiedArgument = argument.replaceAll("Authorization: [^\n]+\n", "Authorization: ****\n");
+					prevHeader = false;
+				} else {
+					if (argument.contains("headers")) {
+						prevHeader = true;
+					}
+					modifiedArgument = argument;
+				}
+
+				// Wrap arguments with spaces in double quotes to make them
+				// runnable if copy-pasted
+				if (modifiedArgument.contains(" ")) {
+					sb.append("\"").append(modifiedArgument).append("\"");
+				} else {
+					sb.append(modifiedArgument);
+				}
+			}
+		}
+		return sb.toString();
+	}
+
+	// Rebooting
+
+	// Reboot UMS same as now
+	public static void reboot() {
+		reboot((ArrayList<String>) null, null, null);
+	}
+
+	// Reboot UMS same as now, adding these options
+	public static void reboot(String... umsoptions) {
+		reboot(null, null, null, umsoptions);
+	}
+
+	// Shutdown UMS and either reboot or run the given command (e.g. a script to
+	// restart UMS)
+	public static void reboot(ArrayList<String> cmd, Map<String, String> env, String startdir, String... umsOptions) {
+		final ArrayList<String> reboot;
+		String macAppPath = null;
+		if (Platform.isMac()) {
+			String libraryPath = ManagementFactory.getRuntimeMXBean().getLibraryPath();
+			if (StringUtils.isNotBlank(libraryPath)) {
+				Pattern pattern = Pattern.compile("(.+?\\.app)/Contents/MacOS");
+				Matcher matcher = pattern.matcher(libraryPath);
+				if (matcher.find()) {
+					macAppPath = matcher.group(1);
+				}
+			}
+		}
+		if (StringUtils.isNotBlank(macAppPath)) {
+			reboot = new ArrayList<>();
+			reboot.add("open");
+			reboot.add("-n");
+			reboot.add("-a");
+			reboot.add(macAppPath);
+			if (umsOptions.length > 0) {
+				reboot.add("--args");
+			}
+		} else {
+			reboot = getUMSCommand();
+		}
+
+		if (umsOptions.length > 0) {
+			reboot.addAll(Arrays.asList(umsOptions));
+		}
+		if (cmd == null) {
+			// We're doing a straight reboot
+			cmd = reboot;
+		} else {
+			// We're running a script that will eventually restart UMS
+			if (env == null) {
+				env = new HashMap<>();
+			}
+			// Tell the script how to restart UMS
+			env.put("RESTART_CMD", StringUtils.join(reboot, " "));
+			env.put("RESTART_DIR", System.getProperty("user.dir"));
+		}
+		if (startdir == null) {
+			startdir = System.getProperty("user.dir");
+		}
+
+		System.out.println("Starting: " + StringUtils.join(cmd, " "));
+
+		final ProcessBuilder pb = new ProcessBuilder(cmd);
+		if (env != null) {
+			pb.environment().putAll(env);
+		}
+		pb.directory(new File(startdir));
+		System.out.println("In folder: " + pb.directory());
+		try {
+			pb.start();
+		} catch (Exception e) {
+			e.printStackTrace();
+			return;
+		}
+		System.exit(0);
+	}
+
+	// Reconstruct the command that started this jvm, including all options.
+	// See
+	// http://stackoverflow.com/questions/4159802/how-can-i-restart-a-java-application
+	// http://stackoverflow.com/questions/1518213/read-java-jvm-startup-parameters-eg-xmx
+	public static ArrayList<String> getUMSCommand() {
+		ArrayList<String> reboot = new ArrayList<>();
+		File jvmPath = new File(System.getProperty("java.home"));
+		String jvmExecutableName = Platform.isWindows() && System.console() == null ? "javaw" : "java";
+		File jvmExecutable = new File(jvmPath, jvmExecutableName);
+		if (!jvmExecutable.exists() || jvmExecutable.isDirectory()) {
+			jvmPath = new File(jvmPath, "bin");
+			jvmExecutable = new File(jvmPath, jvmExecutableName);
+		}
+		if (!jvmExecutable.exists() || jvmExecutable.isDirectory()) {
+			LOGGER.error("Can´t find Java executable \"{}\", falling back to pathless execution using \"{}\"",
+				jvmExecutable.getAbsolutePath(), jvmExecutableName);
+			reboot.add(jvmExecutableName);
+		} else {
+			reboot.add(StringUtil.quoteArg(jvmExecutable.getAbsolutePath()));
+		}
+		for (String jvmArg : ManagementFactory.getRuntimeMXBean().getInputArguments()) {
+			reboot.add(StringUtil.quoteArg(jvmArg));
+		}
+		reboot.add("-cp");
+		reboot.add(ManagementFactory.getRuntimeMXBean().getClassPath());
+		// Could also use generic main discovery instead:
+		// see
+		// http://stackoverflow.com/questions/41894/0-program-name-in-java-discover-main-class
+		reboot.add(PMS.class.getName());
+		return reboot;
 	}
 }
